--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@ h1 {
 	box-sizing: border-box;
 
 	/* TESTING SPECIFIC ONLY; PLS REMOVE*/
-	border: 1px solid black;
-	min-height: 75px;
+	/* border: 1px solid black;
+	min-height: 75px; */
 
 }
 
@@ -31,6 +31,11 @@ h1 {
 	padding-right: 0;
 }
 
+.box--one-fourth {
+	width: 25%;
+	margin: 10px;
+	padding: 1%;
+}
 .article-row {
 	margin: 10px 0;
 }
@@ -65,16 +70,15 @@ h1 {
 }
 
 .button {
-	width: 90%;
 	text-align: center;
 	padding: 10px;
 	margin:2%;
 	background-color: gray;
-	font-family: 'Oswald';
+	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	font-weight: bold;
-	border-radius: 8px;
-	box-shadow: 5px 5px 3px #888888;
+	border-radius: 5px;
+	box-shadow: 0px 2px #CCCC00;
 }
 
 .secondstrip {
@@ -114,4 +118,67 @@ h1 {
 
 .nav {
 	padding: 1% 2% 1% 2%;
+
+}
+
+.developerout {
+	padding-left: 2%;
+	padding-right: 2%;
+}
+
+.picture {
+	width: 100%;
+	padding: 34%;
+	background-color: #CCCCCC;
+	color: #969696;
+}
+
+.flex-direction {
+	flex-direction: column;
+
+}
+
+.center-text {
+	text-align: center;
+}
+
+.tiny-button {
+	background-color: #666666;
+
+}
+
+.tag-element {
+	list-style-type: none;
+	padding: 0px;
+	margin: 0.1em;
+}
+
+.tag-element li {
+	padding-right: 0.25em; 
+}
+
+.tag-element a {
+	text-decoration: none;
+	display: block;
+    background: #666;
+    padding: 1px 12px;
+    border-radius: 100px;
+    font-size: .75em;
+    margin: 0 5px 5px 0;
+    color: white;
+    text-decoration: none;
+    font-family: 'source sans pro'
+    font-size: 1.2em;
+}
+
+body {
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.poloroid {
+	background-color: white
+}
+
+.grey-background {
+	background-color: #CCCCCC;
 }
