--- a/styles/main.css
+++ b/styles/main.css
@@ -78,7 +78,7 @@ h1 {
 	text-transform: uppercase;
 	font-weight: bold;
 	border-radius: 5px;
-	box-shadow: 0px 2px #CCCC00;
+	box-shadow: 0px 2px #9F9F9F;
 }
 
 .secondstrip {
@@ -88,6 +88,7 @@ h1 {
 
 .hero-button {
 	background-color: yellow;
+	box-shadow: 0px 2px #CCCC00;
 }
 
 .footer {
@@ -108,6 +109,7 @@ h1 {
 .logo {
 	color: yellow;
 	font-size: 32px;
+	text-decoration: none;
 }
 
 .navimpt{
@@ -166,7 +168,6 @@ h1 {
     font-size: .75em;
     margin: 0 5px 5px 0;
     color: white;
-    text-decoration: none;
     font-family: 'source sans pro'
     font-size: 1.2em;
 }
